fixed window-controls in chat not visible + changed color

--- a/friends.custom.css
+++ b/friends.custom.css
@@ -3,14 +3,11 @@
 @import url("./src/css/friends/groupChat.css");
 @import url("./src/css/friends/list.css");
 
-
-
 .singleWindowFocusBar {
     mask: unset;
     -webkit-mask: unset;
     background: unset;
 }
-
 
 .TitleBar {
     top: -32px;
@@ -18,9 +15,13 @@
     margin-left: -16px;
 }
 
+.title-area-icon .SVGIcon_Button line, .title-area-icon .SVGIcon_Button rect {
+    stroke: rgb(var(--accent-1));
+}
 
 .friendsListContainer,
 .multiChatDialog {
     height: calc(100% - 48px);
     margin: 32px 16px 16px;
+    overflow: unset !important;
 }
